[package]
name = "stdintap"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/vi/stdintap"
license = "MIT OR Apache-2.0"
description = "CLI tool to read lines from stdin and broadcast them to connected TCP clients"
categories = ["network-programming", "command-line-utilities"]
keywords = ["stdio", "stdin", "tcp", "unix", "text"]

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
clap = { version = "4.5.9", default-features = false, features = ["derive", "help", "std"] }
tokio = { version = "1.38.1", features = ["rt", "macros", "sync", "net", "io-util", "time"] }
tokio-listener = { version = "0.4.3", default-features = false, features = ["clap", "sd_listen", "socket_options", "unix", "unix_path_tools", "multi-listener"] }
